[tool.poetry]
name = "orb-controller"
version = "0.1.0"
description = "A program helps tracking Orb automatically"
authors = ["Ngo Gia Bao <tranbaoelie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
logging = "^0.4.9.6"
numpy = "^2.0.1"
datetime = "^5.5"
pandas = "^2.2.2"
argparse = "^1.4.0"
ipaddress = "^1.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
